web/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: "gce" 
spec:
  rules:
    - host: hirundos.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
          - path: /api/login
            pathType: Prefix
            backend:
              service:
                name: login-service
                port:
                  number: 8000
          - path: /api/menu
            pathType: Prefix
            backend:
              service:
                name: menu-service
                port:
                  number: 8000
          - path: /api/order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8000
